k11: Minor tidying
Change-Id: I6e603b06be8a803353f5632a12f16ef61a625baa